Fixed modal right size on small and medium devices.

--- a/src/WebApp/BugsTracker/wwwroot/css/tracker.css
+++ b/src/WebApp/BugsTracker/wwwroot/css/tracker.css
@@ -922,8 +922,7 @@ tbody tr td a {
     #sidebar.active {
         width: 80px;
         height: 100% !important;
-        /*        position: absolute !important;
-*/ overflow: visible !important;
+         overflow: visible !important;
         top: 0 !important;
         z-index: 666;
         float: left !important;
@@ -969,6 +968,8 @@ tbody tr td a {
         border: 1px solid #dcd9d9;
         z-index: 4;
     }
+
+
 }
 
 
@@ -976,7 +977,6 @@ tbody tr td a {
 }
 
 
-/*===============small-screen overlay sidebar design media queries==============*/
 
 @media only screen and (max-width:992px) {
     #sidebar {
@@ -1004,8 +1004,11 @@ tbody tr td a {
         transition: all 150ms linear;
         background-color: rgba(0,0,0,0.5);
     }
+
+    .modal.right .modal-dialog {
+        width: 100%!important;
+    }
 }
-/*===============small-screen overlay sidebar design media queries==============*/
 
 
 
